feat: add PDF catalog management system with dual logo support
- Catalog Management:
  * New admin page for uploading/managing PDF catalogs
  * Version tracking and date-based history
  * Mark catalogs as "latest" for public download
  * Firestore collection for catalog metadata
  * Firebase Storage for PDF files
  * Public download buttons on productos, datos-tecnicos, and footer

- Dual Logo System:
  * logoLightUrl for dark backgrounds (navbar top, footer)
  * logoDarkUrl for light backgrounds (scrolled navbar)
  * Admin upload interface for both logo variants
  * Dynamic favicon from settings
  * Initial loader logo integration

- Admin UI Improvements:
  * Added "Catálogos PDF" to admin sidebar navigation
  * Fixed navbar overlap on mobile admin pages
  * Hide main navbar/footer on admin routes
  * Consistent theme styling (ts-accent, rounded-xl)

- Security Rules:
  * Firestore: catalogs collection (public read, admin write)
  * Storage: catalogs/ path with PDF validation (50MB max)

- Documentation:
  * Added CATALOG_SYSTEM.md with complete system guide

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
   
   <!-- Initial Loading Screen (Instagram-style) -->
   <div id="app-initial-loader">
-    <img src="/assets/topstone-mark-dark.svg" alt="TopStone" width="128" height="128">
+    <img id="loader-logo" src="/assets/topstone-logotype-horizontal.svg" alt="TopStone" width="128" height="128">
   </div>
   
   <app-root></app-root>
