--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>TopStone - Superficies de Piedra Premium | Granito, Mármol y Cuarzo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Favicon - Using TopStone logo -->
+  <link rel="icon" type="image/svg+xml" href="/assets/topstone-mark-dark.svg">
+  <link rel="alternate icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="/assets/topstone-mark-dark.svg">
   
   <!-- SEO Meta Tags -->
   <meta name="description" content="TopStone ofrece las mejores superficies de piedra premium para cocinas y baños. Descubre nuestra colección de granito, mármol y cuarzo de alta calidad.">
